...
                          "Register",
                          style: TextStyle(color: Colors.white),
                        ),
                      ),
                    )),
                OutlinedButton(
                  key: const Key('loginButton'),
                  onPressed: () {
                    Navigator.of(context).push(
                      LoginScreen.route(loginScaffoldKey),
                    );
                  },
                  child: Text(
...
